# DSOPP

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  code_guildeline.md  dependencies.cmake  format.sh  paper.md  requirements.txt
pydsopp/: CMakeLists.txt  pydsopp.cpp
pydsopp/features/: CMakeLists.txt
pydsopp/features/src/: extract_tracking_features.cpp
pydsopp/storage/: track_storage.py
pydsopp/track/: __init__.py  camera_calibration.py  frame.py  track.py
pydsopp/track/export/: colmap_track_export.py  json_track_export.py
pydsopp/transformations/: __init__.py  __sophus_import.py  motion.py  utils.py
pydsopp/utils/: extract_images.py  nerf_exporter.py  point_cloud_exporter.py  track2colmap.py  track2json.py
src/: CMakeLists.txt
src/agent/: CMakeLists.txt
src/agent/include/agent/: agent.hpp  agent_settings.hpp
src/agent/src/: agent.cpp  agent_settings.cpp
src/application/: CMakeLists.txt  dsopp_main.cpp  track2trajectory.cpp  viewer_main.cpp
src/application/tools/: CMakeLists.txt
src/application/tools/src/: read_tracks.cpp
src/common/: CMakeLists.txt
src/common/constexpr_tools/: CMakeLists.txt
src/common/fabric_tools/: CMakeLists.txt
src/common/file_tools/: CMakeLists.txt
src/common/image_tools/: CMakeLists.txt
src/common/patch/: CMakeLists.txt
src/common/pattern/: CMakeLists.txt
src/common/semantics/: CMakeLists.txt
src/common/time/: CMakeLists.txt
src/common/timestamp_storage/: CMakeLists.txt
src/dsopp/: CMakeLists.txt
src/dsopp/src/: config_loader.cpp  dsopp.cpp
src/energy/: CMakeLists.txt
src/energy/camera_model/: CMakeLists.txt
src/energy/epipolar_geometry/: CMakeLists.txt
src/energy/motion/: CMakeLists.txt
src/energy/n_point_solvers/: CMakeLists.txt
src/energy/problems/: CMakeLists.txt
src/energy/projector/: CMakeLists.txt
src/feature_based_slam/: CMakeLists.txt
src/feature_based_slam/features/: CMakeLists.txt
src/feature_based_slam/initialization_strategy/: CMakeLists.txt
src/feature_based_slam/track/: CMakeLists.txt
src/feature_based_slam/tracker/: CMakeLists.txt
src/features/: CMakeLists.txt
src/features/src/: calculate_pixelinfo.cpp  camera_features.cpp  eigen_tracking_features_extractor.cpp  extraction_tools.cpp  identity_extractor.cpp  pattern_patch.cpp  photometrically_corrected_image.cpp  pixel_data_frame.cpp  pixel_data_frame_extractor.cpp  pixel_map.cpp  sobel_tracking_features_extractor.cpp  tracking_feature.cpp  tracking_features_frame.cpp
src/marginalization/: CMakeLists.txt
src/marginalization/src/: fabric.cpp  frame_marginalization_strategy.cpp  maximum_size_frame_marginalization_strategy.cpp  sparse_frame_marginalization_strategy.cpp
src/measures/: CMakeLists.txt
src/output/: CMakeLists.txt
src/output/output_interfaces/: CMakeLists.txt
src/output/persistent/: CMakeLists.txt
src/output/visualizer/: CMakeLists.txt
src/ransac/: CMakeLists.txt
src/sanity_checker/: CMakeLists.txt
src/sanity_checker/src/: fabric.cpp
src/sensors/: CMakeLists.txt
src/sensors/camera/: CMakeLists.txt
src/sensors/camera_calibration/: CMakeLists.txt
src/sensors/camera_providers/: CMakeLists.txt
src/sensors/camera_transformers/: CMakeLists.txt
src/sensors/sensor/: CMakeLists.txt
src/sensors/sensors/: CMakeLists.txt
src/sensors/sensors_builder/: CMakeLists.txt
src/storage/: CMakeLists.txt
src/storage/proto/: CMakeLists.txt  agent_settings.proto  camera_settings.proto  connection.proto  ecef_poses.proto  frame.proto  gnss_frame.proto  gnss_track.proto  landmark.proto  odometry_track.proto  sanity_check_results.proto  sanity_check_status.proto  semantic_legend.proto
src/storage/src/: track_storage.cpp
src/synchronizer/: CMakeLists.txt
src/synchronizer/src/: fabric.cpp  master_sensor_synchronizer.cpp  no_synchronization.cpp
src/track/: CMakeLists.txt
src/track/connections/: CMakeLists.txt
src/track/export/: CMakeLists.txt
src/track/frames/: CMakeLists.txt
src/track/landmarks/: CMakeLists.txt
src/track/track/: CMakeLists.txt
src/tracker/: CMakeLists.txt
src/tracker/depth_estimators/: CMakeLists.txt
src/tracker/keyframe_strategy/: CMakeLists.txt
src/tracker/landmarks_activator/: CMakeLists.txt
src/tracker/tracker/: CMakeLists.txt
test/: .gitignore  CMakeLists.txt  download_test_data.sh  local_track_performance_test.sh
test/mock/: mock_camera_provider.hpp
test/performance/: CMakeLists.txt
test/performance/application/: run_mega_performance_test.py  run_track_performance.sh
test/performance/benchmarks/: CMakeLists.txt
test/performance/features/: run_btf_extractor.cpp  run_gn_net_extractor.cpp
test/performance/initializer/: CMakeLists.txt  calculate_monocular_initializer_deviations.cpp
test/performance/output/: CMakeLists.txt
test/performance/tracker/: CMakeLists.txt
test/pydsopp/: CMakeLists.txt  test_json_exporter.sh
test/pydsopp/features/: CMakeLists.txt  test_extract_tracking_features.py
test/pydsopp/python_reader/: CMakeLists.txt  compare_two_tracks.cpp  read_and_save.py  save_random_track.cpp  test_python_reader.sh
test/test/: CMakeLists.txt
test/test/application/: CMakeLists.txt  test_config_loader.cpp
test/test/energy/: CMakeLists.txt
test/test/feature_based_slam/: CMakeLists.txt  test_fbs_feature_matcher.cpp  test_fbs_tracker.cpp
test/test/features/: CMakeLists.txt  test_dxdy_accelerated.cpp  test_tracking_features_extractor.cpp
test/test/marginalization/: CMakeLists.txt  test_marginalization.cpp
test/test/output/: CMakeLists.txt
test/test/sensors/: CMakeLists.txt
test/test/track/: CMakeLists.txt  test_track_frames.cpp  test_track_storage.cpp
test/test/tracker/: CMakeLists.txt
test/test_data/tummono/: .gitignore  README.md  dense.yaml  download_data.sh  extreme.yaml  fast.yaml  mono.yaml  standart.yaml
test/tools/: CMakeLists.txt
test/tools/evaluation/: associate.py  evaluate_ate.py
test/tools/src/: compare_track.cpp  depth_gt.cpp  random_track.cpp  savitzky_golay_filter.cpp  solver_test_data.cpp  tum_gt.cpp
test/tools/tests/: test_track2tum_exporter.cpp
(+428 files in other folders)
