add_subdirectory(common)
add_subdirectory(storage)

add_subdirectory(features)
add_subdirectory(sensors)
add_subdirectory(measures)

add_subdirectory(agent)
add_subdirectory(energy)
add_subdirectory(ransac)
add_subdirectory(synchronizer)
add_subdirectory(track)
add_subdirectory(tracker)
add_subdirectory(output)
add_subdirectory(marginalization)
add_subdirectory(feature_based_slam)
add_subdirectory(sanity_checker)

add_subdirectory(dsopp)
add_subdirectory(application)

#[[ contact Roadly INC for this functionality ]]

#[[
add_subdirectory(relocalization)
add_subdirectory(global_localization)

]]
