add_subdirectory(sensors)
add_subdirectory(sensor)

add_subdirectory(camera_providers)
add_subdirectory(camera_calibration)
add_subdirectory(camera_transformers)
add_subdirectory(camera)

#[[ contact Roadly INC for this functionality
add_subdirectory(gnss)
add_subdirectory(imu)
]]

add_subdirectory(sensors_builder)
