add_subdirectory(application)
add_subdirectory(energy)
add_subdirectory(features)
add_subdirectory(output)
add_subdirectory(sensors)
add_subdirectory(tracker)
add_subdirectory(track)
add_subdirectory(marginalization)

add_subdirectory(feature_based_slam)

#[[ contact Roadly INC for this functionality ]]

#[[
    add_subdirectory(relocalization)
    add_subdirectory(global_localization)
]]
